--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,6 @@
 name: Build ALCI Runit ISO
 
 on:
-  schedule:
-    - cron: "0 0 * * 6"
   workflow_dispatch:
 
 jobs:
@@ -14,7 +12,7 @@ jobs:
       contents: write
 
     container:
-      image: artixlinux:latest
+      image: artixlinux/runit:latest
       options: --privileged
 
     steps:
