--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set current date as environment variable
         run: echo "DATE=`date +'%Y.%m.%d'`" >>$GITHUB_ENV
 
-      - name: Update packages and install archiso
+      - name: Update packages
         run: pacman -Syu --noconfirm git squashfs-tools
 
       - name: Build ISO
