--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,5 @@ jobs:
           prerelease: false
           title: "ALCI-Runit"
           files: |
-            ./artools-workspace/iso/base/
-            
+            *./artools-workspace/iso/base/
+          
